# swarmnet_simulation

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run.sh  start_sim  start_sim.py
config/experiment/: config_1.json  config_10.json  config_100.json  config_2.json  config_30.json
config/experiment/comm_test/: config_100.json  config_2.json  config_25.json
config/experiment/hop_count/: config_100.json  config_1500.json  config_1500_fixed_medium.json  config_1m.json  config_225.json  config_900.json
config/experiment/hop_count_time/: config_1000.json  config_2000.json  config_3000.json  config_4000.json  config_5000.json  config_6000.json  config_7000.json  config_8000.json  config_9000.json
config/experiment/hop_count_time_fixed/: config_1000.json  config_2000.json  config_3000.json  config_4000.json  config_5000.json  config_6000.json  config_7000.json  config_8000.json  config_9000.json
config/experiment/id_forward_test/: config_100.json  config_5.json  config_500.json
config/experiment/id_test/: config_100.json  config_100_5x.json  config_100_store_all.json  config_100_through.json  config_100_through_5x.json  config_100_through_store_all.json  config_15_analytical.json  config_2.json  config_25.json  config_25_through.json  config_2_analytical.json  config_2_through_bloom_no_wait.json  config_49.json  config_49_5x.json  config_49_analytical.json  config_49_analytical_copy.json  config_49_bloom.json  config_49_store_all.json  config_49_through_5x.json  config_49_through_bloom_no_wait.json  config_49_through_bloom_send_all.json  config_49_through_store_all.json  config_5.json  config_5_analytical.json  config_64.json
config/experiment/id_test_bloom/: config_100.json  config_2.json  config_25.json  config_3.json  config_4_v3.json  config_64.json  config_64_v3.json
config/experiment/id_test_sparse/: config_49.json  config_49_analytical.json  config_49_analytical_bloom.json  config_49_analytical_bloom_no_wait.json  config_49_analytical_bloom_send_all.json  config_49_analytical_store_all.json  config_49_bloom.json  config_49_bloom_no_wait.json  (+6 more)
config/scheduler/: 1000_id_test.json  25_id_test.json  id_test.json  id_test_batch.json
motion_log/: default_log.txt
script/core_util/: batch_scheduler.py  physics_verifier.py  start_util.py  video_renderer.py
script/usr/: id_test_end_check.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  arena.cpp  arena.h  config.cpp  config.h  event.cpp  event.h  event_queue.cpp  event_queue.h  main.cpp  medium.h  node.cpp  node.h  physics_2d.cpp  physics_2d.h  simulation.cpp  simulation.h  swarmnet_sim.h
src/experiment/: CMakeLists.txt
src/experiment/IROS_2021_experiments/: CMakeLists.txt
src/experiment/IROS_2021_experiments/fixed_size/: CMakeLists.txt  bloom_128_12.cpp  bloom_16_8.cpp  bloom_32_4.cpp  bloom_32_8.cpp  bloom_64_12.cpp  bloom_64_2.cpp  bloom_64_24.cpp  bloom_64_4.cpp  bloom_64_8.cpp  bloom_8_16.cpp  default.cpp  store_all.cpp
src/experiment/IROS_2021_experiments/fixed_size/old_exp/: bloom_32_4.cpp  bloom_64_4.cpp  bloom_64_8.cpp
src/experiment/IROS_2021_experiments/not_fixed/: CMakeLists.txt  default.cpp
src/experiment/IROS_2021_experiments/small_scale/: CMakeLists.txt  bloom_64_12.cpp  bloom_64_no_share.cpp  default.cpp  store_all.cpp  store_all_new.cpp  store_all_ring.cpp
src/experiment/IROS_2021_experiments/small_scale_forward/: CMakeLists.txt  bloom_64_12.cpp  bloom_64_no_share.cpp  default.cpp  store_all.cpp
src/experiment/_id_test_bloom_filter_buggy/: id_test_bloom.cpp
src/experiment/_id_test_bloom_filter_v2/: CMakeLists.txt  id_test_bloom.cpp
src/experiment/comm_test/: CMakeLists.txt  comm_test.cpp  comm_test_placement.cpp
src/experiment/default/: CMakeLists.txt  default_placement.cpp  default_program.cpp
src/experiment/fixed_id_size/: CMakeLists.txt
src/experiment/fixed_id_size/6_bits/: CMakeLists.txt  id_test.cpp  id_test_store_all.cpp  id_test_store_bloom.cpp  id_test_store_bloom_no_wait.cpp  id_test_store_bloom_send_all.cpp
src/experiment/fixed_id_size/7_bits/: CMakeLists.txt  id_test.cpp  id_test_store_all.cpp  id_test_store_bloom.cpp  id_test_store_bloom_no_wait.cpp  id_test_store_bloom_send_all.cpp
src/experiment/fixed_id_size/8_bits/: CMakeLists.txt  id_test.cpp  id_test_store_all.cpp  id_test_store_bloom.cpp  id_test_store_bloom_no_wait.cpp  id_test_store_bloom_send_all.cpp
src/experiment/hop_count/: CMakeLists.txt  hop_count.cpp  hop_count_1500.cpp  hop_count_placement.cpp  hop_count_placement_1500.cpp
src/experiment/id_forward/: CMakeLists.txt  id_forward.cpp
src/experiment/id_test/: CMakeLists.txt  id_test.cpp
src/experiment/id_test_bloom_filter_buggy/: CMakeLists.txt
src/experiment/id_test_bloom_filter_v2/: id_test_bloom_replace_my_filter.cpp
src/experiment/id_test_cmp_fixed_size/: CMakeLists.txt  id_test.cpp  id_test_bloom_send_all.cpp  id_test_store_all.cpp  id_test_store_bloom.cpp  id_test_store_bloom_no_wait.cpp  id_test_store_bloom_no_wait_128_4.cpp  id_test_store_bloom_no_wait_32_8.cpp  id_test_store_bloom_no_wait_64_4.cpp  id_test_store_bloom_no_wait_64_8.cpp
src/experiment/id_test_store_all/: CMakeLists.txt  id_test.cpp  id_test_bloom_send_all.cpp  id_test_store_all.cpp  id_test_store_bloom.cpp  id_test_store_bloom_no_wait.cpp  id_test_store_bloom_no_wait_32_8.cpp  id_test_store_bloom_no_wait_64_4.cpp  id_test_store_bloom_no_wait_64_8.cpp
src/experiment/map_swap/: CMakeLists.txt  map_swap.cpp  map_swap_placement.cpp
src/experiment/motion_test/: CMakeLists.txt  motion_test.cpp
src/experiment/moving_comm_test/: CMakeLists.txt  moving_comm_test.cpp  moving_comm_test_placement.cpp
src/experiment/shapebugs/: CMakeLists.txt  shapebugs_check_shape.cpp  shapebugs_movement.cpp  shapebugs_trilateration.cpp
src/plugin/: CMakeLists.txt
src/unit_test/: CMakeLists.txt
src/util/: CMakeLists.txt  config_parser.cpp  config_parser.h  lib_loader.cpp  lib_loader.h  motion_log.cpp  motion_log.h
src/visualization/: physics_verifier.py  video_renderer.py  visualization.py
util_scripts/: start_util.py  video_renderer.py
(+335 files in other folders)
