add_subdirectory(motion_test)
add_subdirectory(default)
add_subdirectory(comm_test)
add_subdirectory(hop_count)
add_subdirectory(id_test)
# add_subdirectory(id_test_bloom_filter_buggy)
# add_subdirectory(id_test_bloom_filter_v2)
add_subdirectory(moving_comm_test)
add_subdirectory(id_forward)
add_subdirectory(id_test_store_all)
add_subdirectory(fixed_id_size)


