add_library(IROS_2021_fixed_default SHARED default.cpp)
target_link_libraries(IROS_2021_fixed_default kilobot)
# add_library(IROS_2021_fixed_bloom SHARED bloom.cpp)
# target_link_libraries(IROS_2021_fixed_bloom kilobot)
add_library(IROS_2021_fixed_store_all SHARED store_all.cpp)
target_link_libraries(IROS_2021_fixed_store_all kilobot)

add_library(IROS_2021_fixed_bloom_8_16 SHARED bloom_8_16.cpp)
target_link_libraries(IROS_2021_fixed_bloom_8_16 kilobot)
add_library(IROS_2021_fixed_bloom_16_8 SHARED bloom_16_8.cpp)
target_link_libraries(IROS_2021_fixed_bloom_16_8 kilobot)
add_library(IROS_2021_fixed_bloom_32_4 SHARED bloom_32_4.cpp)
target_link_libraries(IROS_2021_fixed_bloom_32_4 kilobot)
add_library(IROS_2021_fixed_bloom_64_2 SHARED bloom_64_2.cpp)
target_link_libraries(IROS_2021_fixed_bloom_64_2 kilobot)

add_library(IROS_2021_fixed_bloom_32_8 SHARED bloom_32_8.cpp)
target_link_libraries(IROS_2021_fixed_bloom_32_8 kilobot)
add_library(IROS_2021_fixed_bloom_64_4 SHARED bloom_64_4.cpp)
target_link_libraries(IROS_2021_fixed_bloom_64_4 kilobot)
add_library(IROS_2021_fixed_bloom_64_8 SHARED bloom_64_8.cpp)
target_link_libraries(IROS_2021_fixed_bloom_64_8 kilobot)