add_library(small_default SHARED default.cpp)
target_link_libraries(small_default kilobot)
add_library(small_bloom_64_12 SHARED bloom_64_12.cpp)
target_link_libraries(small_bloom_64_12 kilobot)
add_library(small_store_all SHARED store_all.cpp)
target_link_libraries(small_store_all kilobot)
add_library(small_store_all_new SHARED store_all_new.cpp)
target_link_libraries(small_store_all_new kilobot)